// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio render should render correctly 1`] = `
<div>
  <input
    aria-invalid="false"
    aria-label="text input"
    class="pf-c-form-control ins-c-conditional-filter "
    data-ouia-component-id="ConditionalFilter"
    data-ouia-component-type="PF4/TextInput"
    data-ouia-safe="true"
    type="text"
    value="undefined"
    widget-type="InsightsInput"
  />
  <svg
    aria-hidden="true"
    class="ins-c-search-icon"
    fill="currentColor"
    height="1em"
    role="img"
    style="vertical-align: -0.125em;"
    viewBox="0 0 512 512"
    width="1em"
  >
    <path
      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
    />
  </svg>
</div>
`;

exports[`Radio render should render correctly placeholder 1`] = `
<div>
  <div
    class="pf-c-select"
    data-ouia-component-id="some placeholder"
    data-ouia-component-type="PF4/Select"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Options menu"
      aria-labelledby=" pf-select-toggle-id-4"
      class="pf-c-select__toggle"
      id="pf-select-toggle-id-4"
      type="button"
    >
      <div
        class="pf-c-select__toggle-wrapper"
      >
        <span
          class="pf-c-select__toggle-text"
        >
          some placeholder
        </span>
      </div>
      <span
        class="pf-c-select__toggle-arrow"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Radio render should render correctly with items - isDisabled 1`] = `
<div>
  <div
    class="pf-c-select"
    data-ouia-component-id="OUIA-Generated-Select-single-2"
    data-ouia-component-type="PF4/Select"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Options menu"
      aria-labelledby=" pf-select-toggle-id-1"
      class="pf-c-select__toggle pf-m-disabled"
      disabled=""
      id="pf-select-toggle-id-1"
      type="button"
    >
      <div
        class="pf-c-select__toggle-wrapper"
      >
        <span
          class="pf-c-select__toggle-text"
        >
          <div
            class="pf-c-radio"
          >
            <input
              aria-invalid="false"
              class="pf-c-radio__input"
              data-ouia-component-id="OUIA-Generated-Radio-2"
              data-ouia-component-type="PF4/Radio"
              data-ouia-safe="true"
              id="some-value-0"
              name="0-radio"
              type="radio"
              value="some-value"
            />
            <label
              class="pf-c-radio__label"
              for="some-value-0"
            >
              <div>
                Custom value
              </div>
            </label>
          </div>
        </span>
      </div>
      <span
        class="pf-c-select__toggle-arrow"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Radio render should render correctly with items 1`] = `
<div>
  <div
    class="pf-c-select"
    data-ouia-component-id="OUIA-Generated-Select-single-1"
    data-ouia-component-type="PF4/Select"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Options menu"
      aria-labelledby=" pf-select-toggle-id-0"
      class="pf-c-select__toggle"
      id="pf-select-toggle-id-0"
      type="button"
    >
      <div
        class="pf-c-select__toggle-wrapper"
      >
        <span
          class="pf-c-select__toggle-text"
        >
          <div
            class="pf-c-radio"
          >
            <input
              aria-invalid="false"
              class="pf-c-radio__input"
              data-ouia-component-id="OUIA-Generated-Radio-1"
              data-ouia-component-type="PF4/Radio"
              data-ouia-safe="true"
              id="some-value-0"
              name="0-radio"
              type="radio"
              value="some-value"
            />
            <label
              class="pf-c-radio__label"
              for="some-value-0"
            >
              <div>
                Custom value
              </div>
            </label>
          </div>
        </span>
      </div>
      <span
        class="pf-c-select__toggle-arrow"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Radio render should render correctly with items and default value 1`] = `
<div>
  <div
    class="pf-c-select"
    data-ouia-component-id="OUIA-Generated-Select-single-3"
    data-ouia-component-type="PF4/Select"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Options menu"
      aria-labelledby=" pf-select-toggle-id-2"
      class="pf-c-select__toggle"
      id="pf-select-toggle-id-2"
      type="button"
    >
      <div
        class="pf-c-select__toggle-wrapper"
      >
        <span
          class="pf-c-select__toggle-text"
        >
          <div
            class="pf-c-radio"
          >
            <input
              aria-invalid="false"
              checked=""
              class="pf-c-radio__input"
              data-ouia-component-id="OUIA-Generated-Radio-3"
              data-ouia-component-type="PF4/Radio"
              data-ouia-safe="true"
              id="some-value-0"
              name="0-radio"
              type="radio"
              value="some-value"
            />
            <label
              class="pf-c-radio__label"
              for="some-value-0"
            >
              <div>
                Custom value
              </div>
            </label>
          </div>
        </span>
      </div>
      <span
        class="pf-c-select__toggle-arrow"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Radio render should render correctly with items and selected value 1`] = `
<div>
  <div
    class="pf-c-select"
    data-ouia-component-id="OUIA-Generated-Select-single-4"
    data-ouia-component-type="PF4/Select"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Options menu"
      aria-labelledby=" pf-select-toggle-id-3"
      class="pf-c-select__toggle"
      id="pf-select-toggle-id-3"
      type="button"
    >
      <div
        class="pf-c-select__toggle-wrapper"
      >
        <span
          class="pf-c-select__toggle-text"
        >
          <div
            class="pf-c-radio"
          >
            <input
              aria-invalid="false"
              class="pf-c-radio__input"
              data-ouia-component-id="OUIA-Generated-Radio-4"
              data-ouia-component-type="PF4/Radio"
              data-ouia-safe="true"
              id="some-value-0"
              name="0-radio"
              type="radio"
              value="some-value"
            />
            <label
              class="pf-c-radio__label"
              for="some-value-0"
            >
              <div>
                Custom value
              </div>
            </label>
          </div>
        </span>
      </div>
      <span
        class="pf-c-select__toggle-arrow"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
